# ziggybee

./: Cargo.toml  Makefile  flake.nix
data/: devices.json  setup.json
docker/: .gitignore  docker-compose.yml
docker/zigbee2mqtt-data/: configuration.yaml
sitegen/: Cargo.toml  config.json  dump.html
sitegen/src/: index.html  main.rs
src/: main.rs
src/db/: data.rs  device_data.rs  mod.rs  raw_data.rs  setup.rs  setup_tree.rs
src/mqtt/: endpoints.rs  mod.rs  remote.rs
src/mqtt/devices/: mod.rs  tradfri_bulb.rs  tradfri_remote_control_n2.rs
src/mqtt/messages/: mod.rs  remote.rs  tradfri_lampa.rs
src/sitegen/: draw_object.rs  index.html  mod.rs
src/web/: dump  mod.rs
src/web/www/: index.css  index.html  index.js
