[package]
name = "ziggybee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
colors-transform = "0.2.11"
env_logger = "0.11.3"
futures = { version = "0.3.30", default-features = false }
paho-mqtt = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
